fix: align status indicator table to grid

--- a/src/components/StatusIndicatorTable/StatusIndicator.module.scss
+++ b/src/components/StatusIndicatorTable/StatusIndicator.module.scss
@@ -79,10 +79,13 @@
   border-bottom: none;
 }
 
-@media (max-width: 600px) {
+.statusIndicatorTableWrapper {
+  margin-left: -1rem;
+  margin-right: -1rem;
+}
+
+@include carbon--breakpoint-between('sm', 'lg') {
   .statusIndicatorTableWrapper {
-    margin-right: -1rem;
-    margin-left: -1rem;
     overflow: scroll;
   }
   .iconGroup {
